[package]
name = "douyin-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["blocking", "json"] }
serde = { version = "*", features = ["derive"] }
indicatif = "*"
clap = { version = "4.5.1", features = ["derive"] }
lazy_static = "*"
regex = "*"
